Make kset an npm package, remove generated code

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "An implementation of the Rubis benchmark for Antidote",
     "dependencies": {
         "antidote_ts_client": "0.1.4",
-        "bs-platform": "1.4.2"
+        "bs-platform": "1.4.2",
+        "kset": "0.1.0"
     }
 }
