--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
         "antidote_ts_client": "0.1.5",
         "bs-platform": "1.4.2",
         "kset": "0.2.0"
+    },
+    "devDependencies": {
+        "rewire": "2.5.2"
     }
 }
